# cosmoloj-f90

./: .gitignore  .gitlab-ci.yml  README.md  build.sh  derived_unit_mod.mod  fundamental_unit_mod.mod  main.f90  transformed_unit_mod.mod  unit-simple.f90  unit_mod.mod
.github/workflows/: build.yml
learning/: .gitlab-ci.yml  CMakeLists.txt  array.f90  build.sh  build_dev.sh  ex1.f90  ex2.f90  ex3.f90  ex4b.f90  ex7.f90  exemple_pointeurs2.f90.err  exemple_pointeurs3.f90  exemple_pointeurs5.f90  exemple_pointeurs6.f90  files1.f90  pointer_t1.f90  pointer_t1bis.f90  pointer_t2.f90  pointer_t3.f90  procedure_conso.f90  procedure_conta.f90  procedure_diago.f90  procedure_fac.f90  procedure_hori.f90  procedure_libel.f90  procedure_magma.f90.err  procedure_newton2.f90  procedure_newton3.f90  procedure_newton4.f90  procedure_profit.f90  procedure_so.f90  procedure_subroutine.f90  procedure_trace.f90  tab1.f90  type2.f90  type3.f90  type4.f90.err
learning/src/: do1.f90  ex4.f90  ex5.f90  ex6.f90  exemple_pointeurs1.f90  exemple_pointeurs4.f90  exemple_pointeurs7.f90  mutual_reference.f90  pointer_t4.f90  procedure_beau.f90  procedure_clas.f90  procedure_echange_chaine.f90  procedure_function.f90  procedure_fv.f90  procedure_initia.f90  procedure_newton1.f90  procedure_permut.f90  procedure_produit.f90  procedure_stat.f90  procedure_stati.f90  procedure_swap.f90  procedure_sym.f90  procedure_sym2.f90  procedure_visu.f90  tab2.f90  type1.f90
unit-simple/: .gitlab-ci.yml  CMakeLists.txt  build.sh  build_dev.sh
unit-simple/demo/: demo.f90  main.f90
unit-simple/src/: unit-simple.f90
